--- a/config.yml
+++ b/config.yml
@@ -20,7 +20,6 @@ pipeline:
 # https://rasa.com/docs/rasa/core/policies/
 policies:
   - name: MemoizationPolicy
-  - name: TEDPolicy
-    max_history: 5
-    epochs: 100
   - name: MappingPolicy
+  - name: FormPolicy
+  - name: KerasPolicy
