--- a/domain.yml
+++ b/domain.yml
@@ -1,32 +1,55 @@
 intents:
   - greet
-  - goodbye
-  - affirm
-  - deny
-  - mood_great
-  - mood_unhappy
-  - bot_challenge
+  - bye
+  - thank
+  - faq
+  - contact_sales
+  - inform
+
+entities:
+  - company
+  - job_function
+  - person_name
+  - budget
+  - business_email
+  - use_case
+
+actions:
+  - respond_faq
+
+slots:
+  company:
+    type: unfeaturized
+  job_function:
+    type: unfeaturized
+  person_name:
+    type: unfeaturized
+  budget:
+    type: unfeaturized
+  business_email:
+    type: unfeaturized
+  use_case:
+    type: unfeaturized
+
+forms:
+  - sales_form
 
 responses:
+  utter_noworries:
+    - text: No worries!
   utter_greet:
-  - text: "Hey! How are you?"
-
-  utter_cheer_up:
-  - text: "Here is something to cheer you up:"
-    image: "https://i.imgur.com/nGF1K8f.jpg"
-
-  utter_did_that_help:
-  - text: "Did that help you?"
-
-  utter_happy:
-  - text: "Great, carry on!"
-
-  utter_goodbye:
-  - text: "Bye"
-
-  utter_iamabot:
-  - text: "I am a bot, powered by Rasa."
-
-session_config:
-  session_expiration_time: 60
-  carry_over_slots_to_new_session: true
+    - text: Hi
+  utter_bye:
+    - text: Bye!
+  utter_ask_business_email:
+    - text: What is your business email?
+  utter_ask_company:
+    - text: What comapany do you work for?
+  utter_ask_budget:
+    - text: What is your annnual budget?
+  utter_ask_job_function:
+    - text: What is your job?
+  utter_ask_person_name:
+    - text: What is your name?
+  utter_ask_use_case:
+    - text: What is your use case?
